# xlsx2dict

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/xlsx2dict/: __init__.py  cli.py
